[tool.poetry]
name = "sequence-gym"
version = "0.1.0"
description = ""
authors = ["Gabriel keith <gabe.keith@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jax = {extras = ["cpu"], version = "^0.4.28"}
flax = "^0.8.3"
matplotlib = "^3.9.0"
orbax-checkpoint = "^0.5.14"
pandas = "^2.2.2"
pyarrow = "^16.1.0"
jupytext = "^1.16.2"
jupyterlab = "^4.2.1"
python-lsp-server = {extras = ["all"], version = "^1.11.0"}


[[tool.poetry.source]]
name = "jax_cuda"
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
